tests/miz/fail/types/fail_type_elaboration_imported_mode_gap_001.miz
import parser.type_fixtures;
reserve m for TypeCaseMode;
